<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="images"
            type="java.util.ArrayList&lt;String&gt;"/>

        <variable
            name="handler"
            type="android.view.View.OnClickListener" />

        <variable
            name="itemClickListener"
            type="com.sdei.farmx.callback.RecyclerCallback"/>

    </data>

    <RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/upload_image_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/dimen_20">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/amber"
                    android:paddingBottom="@dimen/dimen_8"
                    android:paddingLeft="@dimen/dimen_12"
                    android:paddingRight="@dimen/dimen_12"
                    android:paddingTop="@dimen/dimen_8"
                    android:text="@string/upload_image"
                    android:textColor="@color/white" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/grey_light" />

            </LinearLayout>

            <ImageView
                android:id="@+id/add_images"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:onClick="@{handler.onClick}"
                android:tint="@color/grey_light"
                app:srcCompat="@drawable/ic_add" />

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/images_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/upload_image_ll"
            app:gridAdapter="@{images}"
            app:itemClickListener="@{itemClickListener}"/>

        <TextView
            android:id="@+id/publish_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/crop_green"
            android:gravity="center"
            android:onClick="onClick"
            android:padding="@dimen/dimen_16"
            android:text="@string/publish_now"
            android:textColor="@color/white"
            android:textSize="@dimen/dimen_28" />

    </RelativeLayout>

</layout>

